--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,9 @@
   "name": "chantier-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
+    "start": "nodemon --watch src -e js,ts,json --exec \"ts-node src/app.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,5 +21,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.8.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.13",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
