--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^5.0.10",
     "axios": "^1.2.1",
     "date-fns": "^2.29.3",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
